feat: integrate form submission with Cloudflare Worker for GLPI ticket creation, including submission state and error handling.

--- a/index.html
+++ b/index.html
@@ -137,14 +137,87 @@
             <img src="logo.png" alt="LATAM Cloud" className={className} />
         );
 
+        // ============================================
+        // CONFIGURACIÓN CLOUDFLARE WORKER
+        // ============================================
+        // Reemplaza esta URL con la URL de tu Cloudflare Worker
+        const WORKER_URL = 'glpi-ticket-creator.pedrolop90.workers.dev';
+
         const App = () => {
             const [isMobileMenuOpen, setIsMobileMenuOpen] = useState(false);
+            const [isSubmitting, setIsSubmitting] = useState(false);
 
             const toggleMenu = () => setIsMobileMenuOpen(!isMobileMenuOpen);
 
             // Redirigir al panel de clientes
             const handleClientLogin = () => {
                 window.location.href = "https://panel.latam-cloud.online/";
+            };
+
+            // Función para crear ticket a través del Cloudflare Worker
+            const createGLPITicket = async (formData) => {
+                try {
+                    const response = await fetch(WORKER_URL, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify(formData)
+                    });
+
+                    const result = await response.json();
+
+                    if (!response.ok) {
+                        // Manejar diferentes tipos de errores
+                        if (response.status === 429) {
+                            throw new Error(`Has excedido el límite de solicitudes. Por favor, intenta en ${result.retryAfter} segundos.`);
+                        } else if (response.status === 400) {
+                            throw new Error(`Error de validación: ${result.details?.join(', ') || result.error}`);
+                        } else {
+                            throw new Error(result.message || 'Error al procesar la solicitud');
+                        }
+                    }
+
+                    return {
+                        success: true,
+                        ticketId: result.ticketId
+                    };
+
+                } catch (error) {
+                    console.error('Error al crear ticket:', error);
+                    return {
+                        success: false,
+                        error: error.message
+                    };
+                }
+            };
+
+            // Manejar envío del formulario
+            const handleFormSubmit = async (e) => {
+                e.preventDefault();
+                setIsSubmitting(true);
+
+                // Obtener datos del formulario
+                const formData = {
+                    nombre: e.target.elements.nombre.value,
+                    email: e.target.elements.email.value,
+                    telefono: e.target.elements.telefono.value,
+                    empresa: e.target.elements.empresa.value,
+                    servicio: e.target.elements.servicio.value,
+                    comentarios: e.target.elements.comentarios.value
+                };
+
+                // Crear ticket en GLPI
+                const result = await createGLPITicket(formData);
+
+                setIsSubmitting(false);
+
+                if (result.success) {
+                    alert(`✅ ¡Solicitud enviada exitosamente!\n\nTu ticket #${result.ticketId} ha sido creado.\nTe contactaremos pronto con tu invitación al panel.`);
+                    e.target.reset(); // Limpiar formulario
+                } else {
+                    alert(`❌ Error al enviar la solicitud.\n\nPor favor, intenta nuevamente o contáctanos directamente.\n\nDetalle técnico: ${result.error}`);
+                }
             };
 
             return (
@@ -378,17 +451,16 @@
                                     </div>
 
                                     <div className="p-8 md:p-12">
-                                        <form className="space-y-6" onSubmit={(e) => {
-                                            e.preventDefault();
-                                            alert('¡Gracias por tu interés! Te contactaremos pronto con tu invitación al panel.');
-                                        }}>
+                                        <form className="space-y-6" onSubmit={handleFormSubmit}>
                                             {/* Nombre Completo */}
                                             <div>
                                                 <label className="block text-sm font-bold text-slate-800 mb-3">Nombre Completo *</label>
                                                 <input
                                                     type="text"
+                                                    name="nombre"
                                                     required
-                                                    className="w-full px-5 py-4 rounded-xl border-2 border-slate-200 focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition text-lg"
+                                                    disabled={isSubmitting}
+                                                    className="w-full px-5 py-4 rounded-xl border-2 border-slate-200 focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition text-lg disabled:bg-slate-100 disabled:cursor-not-allowed"
                                                     placeholder="Ej: Juan Pérez"
                                                 />
                                             </div>
@@ -398,8 +470,10 @@
                                                 <label className="block text-sm font-bold text-slate-800 mb-3">Correo Electrónico *</label>
                                                 <input
                                                     type="email"
+                                                    name="email"
                                                     required
-                                                    className="w-full px-5 py-4 rounded-xl border-2 border-slate-200 focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition text-lg"
+                                                    disabled={isSubmitting}
+                                                    className="w-full px-5 py-4 rounded-xl border-2 border-slate-200 focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition text-lg disabled:bg-slate-100 disabled:cursor-not-allowed"
                                                     placeholder="correo@empresa.com"
                                                 />
                                             </div>
@@ -409,8 +483,10 @@
                                                 <label className="block text-sm font-bold text-slate-800 mb-3">Teléfono / WhatsApp *</label>
                                                 <input
                                                     type="tel"
+                                                    name="telefono"
                                                     required
-                                                    className="w-full px-5 py-4 rounded-xl border-2 border-slate-200 focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition text-lg"
+                                                    disabled={isSubmitting}
+                                                    className="w-full px-5 py-4 rounded-xl border-2 border-slate-200 focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition text-lg disabled:bg-slate-100 disabled:cursor-not-allowed"
                                                     placeholder="+57 300 123 4567"
                                                 />
                                             </div>
@@ -420,7 +496,9 @@
                                                 <label className="block text-sm font-bold text-slate-800 mb-3">Empresa / Organización</label>
                                                 <input
                                                     type="text"
-                                                    className="w-full px-5 py-4 rounded-xl border-2 border-slate-200 focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition text-lg"
+                                                    name="empresa"
+                                                    disabled={isSubmitting}
+                                                    className="w-full px-5 py-4 rounded-xl border-2 border-slate-200 focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition text-lg disabled:bg-slate-100 disabled:cursor-not-allowed"
                                                     placeholder="Nombre de tu empresa"
                                                 />
                                             </div>
@@ -429,8 +507,10 @@
                                             <div>
                                                 <label className="block text-sm font-bold text-slate-800 mb-3">Servicio de Interés *</label>
                                                 <select
+                                                    name="servicio"
                                                     required
-                                                    className="w-full px-5 py-4 rounded-xl border-2 border-slate-200 focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition text-lg bg-white"
+                                                    disabled={isSubmitting}
+                                                    className="w-full px-5 py-4 rounded-xl border-2 border-slate-200 focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition text-lg bg-white disabled:bg-slate-100 disabled:cursor-not-allowed"
                                                 >
                                                     <option value="">Selecciona una opción</option>
                                                     <option value="vps">VPS (Servidor Virtual Privado)</option>
@@ -445,8 +525,10 @@
                                             <div>
                                                 <label className="block text-sm font-bold text-slate-800 mb-3">Comentarios Adicionales</label>
                                                 <textarea
+                                                    name="comentarios"
                                                     rows="4"
-                                                    className="w-full px-5 py-4 rounded-xl border-2 border-slate-200 focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition text-lg resize-none"
+                                                    disabled={isSubmitting}
+                                                    className="w-full px-5 py-4 rounded-xl border-2 border-slate-200 focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition text-lg resize-none disabled:bg-slate-100 disabled:cursor-not-allowed"
                                                     placeholder="Cuéntanos más sobre tus necesidades..."
                                                 ></textarea>
                                             </div>
@@ -454,9 +536,22 @@
                                             {/* Submit Button */}
                                             <button
                                                 type="submit"
-                                                className="w-full bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-400 hover:to-blue-500 text-white font-bold py-5 rounded-2xl transition-all flex items-center justify-center gap-3 shadow-xl shadow-cyan-500/20 hover:shadow-cyan-500/40 hover:scale-[1.02]"
+                                                disabled={isSubmitting}
+                                                className="w-full bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-400 hover:to-blue-500 text-white font-bold py-5 rounded-2xl transition-all flex items-center justify-center gap-3 shadow-xl shadow-cyan-500/20 hover:shadow-cyan-500/40 hover:scale-[1.02] disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:scale-100"
                                             >
-                                                Enviar Solicitud <ArrowRight size={20} />
+                                                {isSubmitting ? (
+                                                    <>
+                                                        <svg className="animate-spin h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                                            <circle className="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" strokeWidth="4"></circle>
+                                                            <path className="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                                                        </svg>
+                                                        Enviando...
+                                                    </>
+                                                ) : (
+                                                    <>
+                                                        Enviar Solicitud <ArrowRight size={20} />
+                                                    </>
+                                                )}
                                             </button>
 
                                             <p className="text-center text-xs text-slate-500 mt-4">
